Album and artist endpoints
