# src/api/rainwave_dto.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  rainwave-openapi.json
-#   timestamp: 2026-03-08T15:34:53+00:00
+#   timestamp: 2026-03-08T17:40:11+00:00
 
 from pydantic import BaseModel, Field, RootModel
 from enum import Enum, IntEnum, StrEnum
@@ -1173,26 +1173,6 @@ class AllStationsInfo(BaseModel):
     field_6: StationInfo = Field(..., alias='6')
 
 
-class AllSongs1(BaseModel):
-    field_1: dict[str, list[SongInArtist]] | None = Field(None, alias='1')
-    field_2: dict[str, list[SongInArtist]] | None = Field(None, alias='2')
-    field_3: dict[str, list[SongInArtist]] | None = Field(None, alias='3')
-    field_4: dict[str, list[SongInArtist]] | None = Field(None, alias='4')
-    field_5: dict[str, list[SongInArtist]] | None = Field(None, alias='5')
-    field_6: dict[str, list[SongInArtist]] | None = Field(None, alias='6')
-
-
-class ArtistItem(Artist):
-    all_songs: AllSongs1 = Field(
-        ...,
-        description='all_songs[station_id][album_id] = [song1, song2, ...] - for song names, inspect song.album[0].name.',
-    )
-
-
-class ArtistModel(RootModel[list[ArtistItem]]):
-    root: list[ArtistItem]
-
-
 class Group(SongGroup):
     all_songs_for_sid: dict[str, dict[str, list[SongInArtist]]] = Field(
         ..., description='all_songs_for_sid[album_id][station_id] = [song1, song2...]'
@@ -1246,16 +1226,21 @@ class Stations(RootModel[list[Station]]):
     root: list[Station]
 
 
+class AllSongsForArtist(BaseModel):
+    field_1: dict[str, list[SongInArtist]] | None = Field(None, alias='1')
+    field_2: dict[str, list[SongInArtist]] | None = Field(None, alias='2')
+    field_3: dict[str, list[SongInArtist]] | None = Field(None, alias='3')
+    field_4: dict[str, list[SongInArtist]] | None = Field(None, alias='4')
+    field_5: dict[str, list[SongInArtist]] | None = Field(None, alias='5')
+    field_6: dict[str, list[SongInArtist]] | None = Field(None, alias='6')
+
+
 class Api4AlbumPostResponse(BaseModel):
     album: Album
 
 
 class Api4AllAlbumsPaginatedPostResponse(BaseModel):
     all_albums_paginated: AllAlbumsPaginated
-
-
-class Api4ArtistPostResponse(BaseModel):
-    artist: ArtistModel
 
 
 class Api4GroupPostResponse(BaseModel):
@@ -1286,3 +1271,11 @@ class Api4SearchPostResponse(BaseModel):
 
 class Api4StationsPostResponse(BaseModel):
     stations: Stations
+
+
+class ArtistModel(Artist):
+    all_songs: AllSongsForArtist | None = None
+
+
+class Api4ArtistPostResponse(BaseModel):
+    artist: ArtistModel
