# src/api/rainwave_typeddicts.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  rainwave-openapi.json
-#   timestamp: 2026-03-08T15:34:54+00:00
+#   timestamp: 2026-03-08T17:40:12+00:00
 
 from typing import Any, Literal, NotRequired, TypedDict
 
@@ -272,6 +272,9 @@ type AlreadyVoted = list[list[Any]]
 class ApiInfo(TypedDict):
     exectime: float
     time: Time
+
+
+type ArtistDetail = Any
 
 
 type Artists = list[SearchArtist]
@@ -818,8 +821,8 @@ AllStationsInfo = TypedDict(
 )
 
 
-AllSongs1 = TypedDict(
-    'AllSongs1',
+AllSongsForArtist = TypedDict(
+    'AllSongsForArtist',
     {
         '1': NotRequired[dict[str, list[SongInArtist]]],
         '2': NotRequired[dict[str, list[SongInArtist]]],
@@ -831,11 +834,8 @@ AllSongs1 = TypedDict(
 )
 
 
-class ArtistItem(Artist):
-    all_songs: AllSongs1
-
-
-type Artist1 = list[ArtistItem]
+class Artist1(Artist):
+    all_songs: NotRequired[AllSongsForArtist]
 
 
 class Group(SongGroup):
